--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <H1>Welcome to My Website </H1>
-<H1>Hello How Are You</H1>
+i<H1>Hello How Are You</H1>
 <H1>Code Pipeline using Git</H1>
+<h2>pushing code from CLI </h2>
 </body>
 </html>
